objects/PROS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Quote__r.CameleonCPQ__AccountId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Term__c</fullName>
        <label>Agreement Term Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBFS_Price_Cap__c</fullName>
        <label>CBFS Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBFS_Price_Lock_days__c</fullName>
        <label>CBFS Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPD_Price_Cap__c</fullName>
        <label>CPD Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPD_Price_Lock_days__c</fullName>
        <label>CPD Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CheckBox_Agreement_Term__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Agreement Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Committed_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Cost_Basis_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Basis - Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Cost_Basis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Basis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Customer_comm_requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custome Communication requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Doc_required_to_participate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document required to participate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Follower_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follower Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Forced_inheritance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced Inheritance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Furniture_Delivery_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Furniture Delivery Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Is_Desktop_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dektop Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Less_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing should not be less than i</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_MFN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Minimum_Order_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Minimum Order Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_More_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing should not be more than</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Nb_allowed_on_the_core__c</fullName>
        <defaultValue>false</defaultValue>
        <label># of Items allowed on core</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_No_custom_inherited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customization on inherited core sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Non_standard_callout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-standard callout + comment box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Payment_Term_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Term Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Renewal_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckBox_Small_Order_Fee__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Small Order Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Committed_Revenue__c</fullName>
        <label>Committed Revenue</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Core_Id__c</fullName>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Name__c</fullName>
        <label>Core Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Basis_Other__c</fullName>
        <label>Cost Basis - Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Lower_Bracket_1__c</fullName>
        <label>Custom Core Item Count Lower Bracket 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_1__c</fullName>
        <label>Custom Core Item Count Tier 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_2__c</fullName>
        <label>Custom Core Item Count Tier 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Tier_3__c</fullName>
        <label>Custom Core Item Count Tier 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_1__c</fullName>
        <label>Custom Core Item Count Upper Bracket  1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_2__c</fullName>
        <label>Custom Core Item Count Upper Bracket  2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Core_Item_Count_Upper_Bracket_3__c</fullName>
        <label>Custom Core Item Count Upper Bracket  3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_communication_requirements__c</fullName>
        <label>Customer communication requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Notification &amp; Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desktop Delivery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery_as_a_of_orders__c</fullName>
        <label>Desktop Delivery (as a % of orders)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Documentation_required_to_participate__c</fullName>
        <label>Documentation required to participate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follower_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follower relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forced_inheritance_no_custom_cores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced inheritance (no custom cores)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Delivery_Fee__c</fullName>
        <label>Furniture Delivery Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furniture_Price_Cap__c</fullName>
        <label>Furniture Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Furniture_Price_Lock_days__c</fullName>
        <label>Furniture Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hosted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hosted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Less_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing not less than inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Favored Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Fee__c</fullName>
        <label>Minimum Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing not more than inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_Less_Inherited_Pricing__c</fullName>
        <description>Custom pricing should not be more or less than inherited pricing</description>
        <formula>IF(Less_Inherited_Pricing__c=True,&quot;Cannot be less&quot;,IF(More_Inherited_Pricing__c=True,&quot;Cannot be more&quot;,&quot;Contract Silent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom pricing should not be more or less than inherited pricing</inlineHelpText>
        <label>Price should not be more/less inherited</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_of_items_allowed_on_the_core__c</fullName>
        <label># of items allowed on the core</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_customization_on_inherited_core_sku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No customization on inherited core sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_standard_callout_comment_box__c</fullName>
        <label>Non-standard terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Supplies_Price_Cap__c</fullName>
        <label>Office Supplies Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Supplies_Price_Lock_days__c</fullName>
        <label>Office Supplies Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paper_Price_Cap__c</fullName>
        <label>Paper Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paper_Price_Lock_days__c</fullName>
        <label>Paper Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Type__c</fullName>
        <label>Payment Term Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_NCC__c</fullName>
        <label>Proposed NCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pushed_to_CSF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed to CSF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal_Options__c</fullName>
        <label>Renewal Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs validation</fullName>
                    <default>true</default>
                    <label>Needs validation</label>
                </value>
                <value>
                    <fullName>Yes - Upon request</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Contract silent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Small_Order_Fee__c</fullName>
        <label>Small Order Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Quote__r.PROSAgreement__AgreementStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Price_Cap__c</fullName>
        <label>Technology Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Technology_Price_Lock_days__c</fullName>
        <label>Technology Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toner_Price_Cap__c</fullName>
        <label>Toner Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Toner_Price_Lock_days__c</fullName>
        <label>Toner Price Lock (days)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_type_of_customer_communication_is__c</fullName>
        <label>What type of customer communication?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>